--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Push image
       run: |
            IMAGE_ID=wmn1525/$IMAGE_NAME
-           docker tag $IMAGE_NAME $IMAGE_ID:1.0
-           docker push $IMAGE_ID:1.0
+           docker tag $IMAGE_NAME $IMAGE_ID:latest
+           docker push $IMAGE_ID:latest
